# opportunity-radar

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
config/: audience_profiles.yaml  categories.yaml  report_template.md  scoring_rules.yaml  sources.yaml
docs/: github_about.md  input_schema.md  methodology.md
examples/sample_inputs/: sample_company_signals.yaml  sample_events.yaml  sample_policy_signals.yaml  sample_side_hustle_ideas.yaml  singapore_ai_fintech_jobs.csv
examples/sample_outputs/: weekly_opportunity_radar.json
examples/sample_reports/: weekly_opportunity_radar_en.md  weekly_opportunity_radar_zh.md
scripts/: normalize_line_endings.py  run_demo.ps1  run_demo.py  verify_line_endings.py
src/opportunity_radar/: __init__.py  config.py  main.py  models.py
src/opportunity_radar/dashboard/: __init__.py  app.py  helpers.py
src/opportunity_radar/pipeline/: __init__.py  build_context.py  classify.py  deduplicate.py  generate_mock_data.py  import_manual.py  normalize.py  rank.py  score.py  validate_inputs.py
src/opportunity_radar/writers/: __init__.py  html_writer.py  json_writer.py  markdown_writer.py
tests/: test_cli.py  test_dashboard_helpers.py  test_datetime_parsing.py  test_explanations.py  test_html_writer.py  test_import_manual.py  test_markdown_escaping.py  test_models.py  test_normalize.py  test_ranking.py  test_report_generation.py  test_scoring.py  test_scoring_matching.py  test_validation.py
