[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opportunity-radar"
version = "0.2.0"
description = "Local-first Singapore AI and FinTech opportunity intelligence prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "jinja2>=3.1",
  "markdown>=3.5",
  "streamlit>=1.32",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
]

[project.scripts]
opportunity-radar = "opportunity_radar.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_site_packages = true
warn_unused_configs = true
strict = false
